--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,10 @@ h1 {
   }
 }
 
+div.mejs__controls {
+  background: rgba(0, 0, 0, 0.8) !important;
+}
+
 .highlighted {
   background-color: #adffc7;
 }
